# jdmtool

./: .gitignore  .mise.toml  .pylintrc  CHANGELOG.md  DataCards.md  ElectronicCharts.md  MANIFEST.in  README.md  Skybound.md  ngt_demo.py  pyproject.toml  read_taws.py  set_serial.py  taws_utils.py  verify_taws.py  write_taws.py  write_taws_file.py
src/jdmtool/: avidyne.py  aviutil.py  chartview.py  checksum.py  common.py  config.py  const.py  crc32q.py  data_card.py  dbf.py  device.py  downloader.py  featunlk.py  g1000.py  garmin.py  gplugin.py  main.py  ngt.py  service.py  skybound.py  taw.py  usb_common.py  util.py
src/jdmtool/data_card/: Garmin 011-01277-00.md  Garmin Card Readers.md  Garmin-00_usbtreeview.txt  common.py  detect.py  garmin.py  skybound.py
src/jdmtool/data_card/firmware/: README.md  fw.py  fw_writer.py
src/jdmtool/firmware/: README.md
src/jdmtool/flygarmin/: api.py  oauth.py
src/jdmtool/flygarmin/resources/flygarmin/: index.html  index.js
tests/: conftest.py  test_checksum.py  test_crc32q.py  test_garmin.py  test_ifd400.py  test_ngt.py  test_skybound.py
tests/data/ifd400/: expected_debug.txt  expected_jdm.json  services.xml
tests/data/ifd400-taildrm/: expected_debug.txt  expected_jdm.json  services.xml
tests/data/ifd400-taildrm/zip/tail/: Service.dsf.txt
tests/data/ifd400/zip/: Service.dsf.txt
udev/: 50-garmin.rules  50-ngt.rules  50-skybound.rules  README.md  readme.md
