[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jdmtool"
version = "0.3.2"
authors = [
  { name="Dima Ryazanov", email="dima@gmail.com" },
]
description = "Tool for downloading and transferring Jeppesen databases"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'importlib-metadata; python_version < "3.8"',
    'libusb1>=2.0.1',
    'platformdirs>=2.6.2',
    'psutil>=5.9.4',
    'pyudev>=0.24.3; sys_platform == "linux"',
    'pywin32>=306; sys_platform == "win32"',
    'requests>=2.26.0',
    'tqdm>=4.1.0',
    'typing_extensions; python_version < "3.11"',
]

[project.optional-dependencies]
jit = [
    'numpy>=1.21.6',
    'numba>=0.56.4',
]

[project.urls]
Homepage = "https://github.com/dimaryaz/jdmtool"
Issues = "https://github.com/dimaryaz/jdmtool/issues"
Changelog = "https://github.com/dimaryaz/jdmtool/blob/main/CHANGELOG.md"

[project.scripts]
jdmtool = "jdmtool.main:main"
chartview = "jdmtool.chartview:main"
